Overflow fix 2

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,9 @@
 html,
 body {
     min-width: 100%;
-    min-height: 100%;
+    min-height: 100%; 
+    max-width: 100%;
+    max-height: 100%;
     padding: 0;
     margin: 0;
     height: 100%;
@@ -11,7 +13,7 @@ body {
     font-style: normal;
     user-select: none;
     background-color: #00000000;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 #content-bg {
